Fix the 1px visible on mobile when header disapear on scroll down

--- a/stylesheets/components/header/_nav.scss
+++ b/stylesheets/components/header/_nav.scss
@@ -54,6 +54,8 @@
       align-items: flex-start;
       gap: var(--gap);
 
+      height: 100vh;
+
       padding: (2 * $margin-md);
       padding-bottom: $margin-md;
 
