--- a/stylesheets/utilities/_helpers.scss
+++ b/stylesheets/utilities/_helpers.scss
@@ -29,7 +29,7 @@
 
   @include breakpoint-down(large) {
     width: 100%;
-    translate: 0 -100%;
+    translate: 0 -101%;
     transition: 0.5s;
   }
 
